--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -67,7 +67,7 @@ header nav ul li a:hover {
     background: linear-gradient(310deg, rgba(10,86,161,1) 30%, rgba(54,50,154,0.2315519957983193) 100%);
     background-size:cover;
     height: 250px;
-    background-position: 1320px;
+   
 }
 .title {
     text-align: right;
@@ -183,21 +183,21 @@ background: linear-gradient(310deg, rgba(10,86,161,1) 30%, rgba(54,50,154,0.2315
 }
 /* Class Styling Ends here */
 
-/* Footer */
-footer ul {
+/* Footer selector */
+footer {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: center;
-    font-size: 25px;
-    text-align: center;
-    margin-top: -4%; 
-    
 }
-a {
+.content-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-basis: 100%;
+    align-items: center;
+    font-size: 20px;
+}
+#contact-list a {
     text-decoration: none;
 }
-footer ul p :hover {
+.content-wrapper :hover {
     background-color:darkgray;
     border-radius: 5px;
     color: white;
